<resources>
    <string name="app_name">life-cycle</string>

    // Menu
    <string name="menuStart">Start</string>
    <string name="menuForm">Form</string>
    <string name="menuSaved">Saved data</string>
    <string name="menuLogout">Logout</string>

    // Main
    <string name="mainHeader">Login here</string>
    <string name="mainNameLabel">Username</string>
    <string name="mainNameInput"></string>
    <string name="mainPasswordLabel">Password</string>
    <string name="mainPasswordInput"></string>
    <string name="loginButton">Login</string>

    // Form first
    <string name="formBirthDate">Date of birth</string>
    <string name="formBath">Number of baths last summer</string>
    <string name="formColor">Favorite color</string>
    <string name="formDreams">What did you dream about last night</string>
    <string name="formSong">Your favorite song</string>
    <string name="saveButton">Save</string>

    // Saved data
    <string name="savedDataDisplay">Your saved data will be displayed here...</string>
    <string name="title_activity_menu">Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>




</resources>