<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/formBirthDate"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/formBirthDate"
            android:inputType="date" />

        <EditText
            android:id="@+id/formBath"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/formBath"
            android:inputType="number" />

        <EditText
            android:id="@+id/formColor"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/formColor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/formDreams"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/formDreams"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/formSong"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:ems="10"
            android:hint="@string/formSong"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>